--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,15 @@
     "axios": "^1.5.1",
     "bufferutil": "^4.0.7",
     "cookie": "^0.5.0",
+    "cookie-cutter": "^0.2.0",
+    "cookies-next": "^4.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "moment": "^2.29.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0",
     "react-router-dom": "^6.16.0",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
@@ -40,5 +42,9 @@
     "eslint-config-next": "13.5.3",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
+  },
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   }
 }
