--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": ">=18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": ">=18.2.0",
     "react-router-dom": "^6.16.0",
     "socket.io-client": "^4.7.2",
